[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxsgp4"
version = "0.2.0"
description = "A pure JAX implementation of the SGP4 satellite orbit propagation algorithm"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/cmpriestley/jaxsgp4"
Repository = "https://github.com/cmpriestley/jaxsgp4"
Issues = "https://github.com/cmpriestley/jaxsgp4/issues"

[tool.setuptools.package-data]
jaxsgp4 = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
